# aim

./: .coveragerc  .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.md  MANIFEST.in  README.md  SECURITY.md  VERSION  insert_runs.ipynb  main.py  main_de.py  package-lock.json  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.docs.txt  requirements.txt  ruff.toml  security.md  setup.cfg  setup.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  code_improvement.md  config.yml  documentation.md  feature_request.md  question.md
.github/scripts/: override-version.sh
.github/workflow_files/: create-docker-image.sh  override-version.sh  requirements.dev.txt  requirements.txt
.github/workflows/: change-docker-image-tag.yml  create-docker-image.yml  docker-image.yml  nightly-release.yml  pull-request-naming-convention.yml  pull-request.yml  python-package.yml
aim/: VERSION  __about__.py  __init__.py  __version__.py  acme.py  catboost.py  distributed_hugging_face.py  fastai.py  hf_dataset.py  hugging_face.py  keras.py  keras_tuner.py  lightgbm.py  logger.py  mxnet.py  optuna.py  paddle.py  prophet.py  pytest.ini  pytorch.py  pytorch_ignite.py  pytorch_lightning.py  ray_tune.py  sb3.py  tensorflow.py  xgboost.py
aim-2.1.1rc1/: README.md
aim-2.1.1rc1/aim/: __init__.py  __version__.py  pytorch_lightning.py
aim/aim-env/: pyvenv.cfg
aim/artifacts/: __init__.py  artifact.py  artifact_writer.py  map.py  metric.py  (+4 more)
docker/: Dockerfile  build-wheels.sh  create-docker-image.sh
docs/: CNAME  OVERVIEW.md  README.md  branching.md  cli.md  contributor-guide.md  make.bat  relevant-tools-libs.md  requirements.txt  test-networks.md
docs_v4/: requirements.txt
examples/: .gitignore  README.md  Untitled.ipynb  acme_track.py  base-figures-track.py  benchmark_metric.py  catboost_track.py  diff.py  fastai_track.py  hugging_face_track.py  keras_cnn_profiler.py  keras_track.py  keras_track_distribution.py  keras_tuner_track.py  keras_vgg_save.py  lightgbm_track.py  mxnet_track.py  optuna_track.py  paddle_track.py  prophet_track.py  pytorch_ignite_track.py  pytorch_lightning_track.py  pytorch_model_load.py  pytorch_model_save.py  pytorch_profiler.py  pytorch_segmentation.py  pytorch_session_track.py  pytorch_track.py  pytorch_track_all.py  pytorch_track_basic.py  pytorch_track_correlation.py  pytorch_track_distribution.py  pytorch_track_images.py  pytorch_track_lr.py  pytorch_track_media.py  pytorch_track_metrics.py  pytorch_track_module.py  pytorch_track_params.py  ql.py  ray_tune_track.py  (+29 more)
performance_tests/: BASELINE  base.py  conftest.py  queries.py  requirements.txt  utils.py
tests/: README.md  Security.md  base.py  conftest.py  model-architectures.md  model-testing-env.md  requirements.txt  test_sdk_save.py  test_sdk_track.py  test_sdk_track_import.py  test_upgrade_cmd.py  utils.py
troubleshooting/: TROUBLESHOOTING.md  base_project_statistics.py
(+5209 files in other folders)
